tests/negative/typecheck/index_product.orng
// index_product.orng:7:6: error: index is not compile-time known
//     x[f()]
//     ^
// 
fn main() -> Int {
    let x: (Int, Char, Bool, Int)
    x[f()]
}

fn f() -> Int { 3 }